--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="10dp"
     android:paddingLeft="15dp"
     android:paddingRight="60dp"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:orientation="vertical">
 
     <View
         android:id="@+id/avatar"
@@ -14,6 +15,7 @@
         android:background="@drawable/circle"
         android:layout_width="34dp"
         android:layout_height="34dp" />
+
 
     <TextView
         android:id="@+id/name"
@@ -24,6 +26,13 @@
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
         android:text="Rose"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageToBeRecieved"
+        android:onClick="ShowImage"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,4 +47,4 @@
         android:textSize="18dp"
         android:text="How are you doing? This is a long message that should probably wrap."
         />
-</RelativeLayout>
+</LinearLayout>
